--- a/docs/technical_functional_design/main.qmd
+++ b/docs/technical_functional_design/main.qmd
@@ -16,8 +16,23 @@ format:
 
 
 # 1. Introduction and Goals
+This project aims to leverage artificial intelligence (AI) to detect solar panels from satellite images, integrate the results with Kadaster’s housing database. To ensure scalability, reproducibility, and efficiency, an end-to-end MLOps pipeline will be implemented. The following goals are structured to maintain clarity and alignment with project objectives.  
 
-# 1. Introduction and Goals  
+## 1-1. Solar Panel Detection Accuracy  
+**In order to** improve solar panel identification for accurate energy profiling,  
+**As** a data scientist,  
+**I want** to train and optimize a YOLO-based model to achieve **90%+ accuracy** using experiment tracking and hyperparameter tuning.  
+
+## 1-2. Kadaster Integration  
+**In order to** link detected solar panels with housing data for better energy label predictions,  
+**As** a developer,  
+**I want** to implement a **data-matching algorithm** that ensures at least **85% successful matches** with Kadaster’s housing database.  
+
+## 1-3. MLOps Pipeline  
+**In order to** ensure efficient, reproducible, and automated model training and deployment,  
+**As** an MLOps engineer,  
+**I want** to develop a **complete MLOps pipeline** that covers **data ingestion, versioning, preprocessing, model training, deployment, and monitoring**, 
+
 
 ## Background and Context  
 The NOWATT project aims to accelerate the energy transition and mitigate grid congestion by promoting energy-neutral neighborhoods. This initiative integrates multiple stakeholders, including residents, SMEs, and government agencies, to optimize energy efficiency through AI-driven solutions.  
